[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "birdxplorer_common"
description = "Common library for BirdXplorer"
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "../README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pydantic",
    "python-dateutil",
    "sqlalchemy",
    "pydantic_settings",
    "JSON-log-formatter",
    "ulid-py",
]

[project.urls]
Source = "https://github.com/codeforjapan/BirdXplorer"

[tool.setuptools]
packages=["birdxplorer_common"]

[tool.setuptools.package-data]
birdxplorer = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "freezegun",
    "types-python-dateutil",
    "psycopg2-binary",
    "factory_boy",
    "polyfactory",
    "types-psycopg2",
]
prod=[
    "psycopg2"
]


[tool.pytest.ini_options]
addopts = ["-sv", "--doctest-modules", "--cov=birdxplorer_common", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "birdxplorer_common"]
filterwarnings = [
    "error",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"
known_first_party = "birdxplorer_api,birdxplorer_common,birdxplorer_etl"

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = true
    envlist = py310

    [testenv]
    setenv = 
        VIRTUALENV_PIP = 24.0
        DATA_DIR = {env:BX_DATA_DIR}
    deps =
        -e .[dev]
    commands = 
        black birdxplorer_common tests
        isort birdxplorer_common tests
        pytest
        pflake8 birdxplorer_common/ tests/ stubs/
        mypy birdxplorer_common --strict
        mypy tests --strict
"""
