[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdxplorer_etl"
version = "0.1.0"
description = "BirdXplorer ETL is data extraction"
authors = [
    {name = "osoken"},
    {name = "yu23ki14"}
]
dependencies = [
    "birdxplorer_common[dev] @ git+https://github.com/codeforjapan/BirdXplorer.git@etl/main#subdirectory=common",
    "pandas",
    "sqlalchemy",
    "requests",
    "pytest",
    "prefect",
    "stringcase"
]

[project.urls]
Source = "https://github.com/codeforjapan/BirdXplorer"

[tool.setuptools.package-data]
birdxplorer = ["py.typed"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    'prefect'
]

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = [
    "tests",
]
